// Copyright (c) 2020, NVIDIA CORPORATION.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package nvidia.riva.nlp;

option cc_enable_arenas = true;

// Riva NLP Services implement task-specific APIs for popular NLP tasks
// including intent recognition (as well as slot filling), and entity
// extraction.
service RivaNLP {
  // NaturalQuery is a search function that enables querying one or more
  // documents or contexts with a query that is written in natural language.
  rpc NaturalQuery(NaturalQueryRequest) returns (NaturalQueryResponse) {}
}

message NaturalQueryRequest {
  // The natural language query
  string query = 1;

  // Maximum number of answers to return for the query. Defaults to 1 if not
  // set.
  uint32 top_n = 2;

  // Context to search with the above query
  string context = 3;
}

message NaturalQueryResult {
  // text which answers the query
  string answer = 1;
  // Score representing confidence in result
  float score = 2;
}

message NaturalQueryResponse { repeated NaturalQueryResult results = 1; }
